tests/Fase2-Semantic/error/t42-void_method_call_as_expression.ctds
class aux {

}

class main {
    integer x;
    
    void method(){}

    integer add( integer b){
        integer a;
        a = x+method();
        return a;
    }

    void main(){
        x=0;
        add(2);
    }
    
}
